*** fixed a bug in id3v1_tag::set_year

Was calling `strlen` on a string that may not be null-terminated.
*** fixed issue #5: `scribbu popm -C N` fails when there is no PCNT frame

<https://github.com/sp1ff/scribbu/issues/5>
*** fixed a bug in copying ID3v2 tags to ID3v1

*** `scribbu text' will now, optionally, create an ID3v2 tag if there isn't one already
*** `scribbu dump' fails silently on file-not-found

*** owner not being written out by `scribbu popm' in some cases

*** id3v2_tag text frame virtuals will SEGV if the relevant frame isn't there

https://github.com/sp1ff/scribbu/issues/4

*** handle problems when renaming across filesystems

** New Features

*** class `comments` is now mutable
*** updated the default pretty-printer to list the language field
*** updated the manual

Especially the section on scripting.
*** `scribbu dump` now prints PRIV frames
*** `scribbu text` now operates on existing ID3v1 tags, when possible
*** the `create-frame` short flag for `popm` changed from -A to -f.
*** `encodings' sub-command added
*** `m3u' sub-command added
*** Arch & Debian packages now provided
*** `scribbu genre' now takes a '--get' flag
*** `scribbu dump' will now list mtime
*** builds on MacOS
*** new sub-command `genre'

`scribbu genre' lets you set the "genre" for your file by updating the relevant fields in the file's ID3v1 and/or -2 tags.

* Changes in scribbu 0.5

** Bug Fixes

*** CSV pretty-printing is now RFC 4180-compliant

** New Features

*** scribbu now builds on MacOS using the native toolchain

*** `scribbu report' now offers {tab,ascii}-delimited output

*** `scribbu report' now includes the filename, directory & overall size

*** Scheme API completely re-written

*** New sub-commands `scribbu popm', `scribbu xtag' & `scribbu text'

* Changes in scribbu 0.4

** New Features

*** made ID3v2 tags mutable

*** embedded Guile

*** added man pages & Texinfo manual

* Changes in scribbu 0.2

** New Features

*** 'dump' sub-command